--- a/website/index.html
+++ b/website/index.html
@@ -851,7 +851,7 @@
     </section> -->
     <!-- Maps-Area / -->
     <!-- Blog-Area -->
-    <section class="blog-area section-padding-top" id="blog-page">
+    <!-- <section class="blog-area section-padding-top" id="blog-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -862,19 +862,6 @@
                 </div>
             </div>
             <div class="row">
-                <!-- <div class="col-xs-12 col-sm-4">
-                    <article class="blog-single wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="blog-photo">
-                            <img class="height-300-px" src="./images/blog-1.jpeg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h5 class="title"><a href="https://medium.com/@emiliabunea/why-global-managers-need-passionate-hobbies-7d546db539fc?source=search_post" target="_blank">Why global managers need passionate hobbies</a></h5>
-                            <ul class="blog-meta">
-                                <li><i class="zmdi zmdi-time"></i> February 01st, 2020</li>
-                            </ul>
-                        </div>
-                    </article>
-                </div> -->
                 <div class="content_element">
                     <hr class="pLine">
                     <h4>
@@ -903,22 +890,9 @@
                     </div>
                     <hr class="pLine">
                 </div>
-                <!-- <div class="col-xs-12 col-sm-4">
-                    <article class="blog-single wow fadeInUp" data-wow-delay="0.9s">
-                        <div class="blog-photo">
-                            <img class="height-300-px" src="./images/blog-3.jpeg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h5 class="title"><a href="https://medium.com/human-output/why-you-should-form-hobbies-over-habits-cec4b7de1716" target="_blank">Why You Should Form Hobbies Over Habits.</a></h5>
-                            <ul class="blog-meta">
-                                <li><i class="zmdi zmdi-time"></i> February 1, 2020</li>
-                            </ul>
-                        </div>
-                    </article>
-                </div> -->
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Blog-Area / -->
     <!-- Contact-Form -->
     <section id="contact-page" class="section-padding">
