--- a/website/index.html
+++ b/website/index.html
@@ -228,14 +228,14 @@
                 <!-- <div class="navbar-header navbar-right">
                     <a href="#" class="navbar-bttn">Try for free</a>
                 </div> -->
-                <ul class="nav navbar-nav navbar-left ml-18">
+                <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#home-page">Home</a></li>
                     <li><a href="#about-page">How it works</a></li>
                     <li><a href="#feature-page">Activities</a></li>
-                    <!-- <li><a href="#gallery-page">Gallery</a></li> -->
-                    <!-- <li><a href="#price-page">Membership</a></li> -->
+                    <li><a href="#faq">FAQs</a></li>
+                    <li><a href="#price-page">Plans</a></li>
                     <li><a href="#partner-with-us">Partner With Us</a></li>
-                    <li><a href="#blog-page">Blog</a></li>
+                    <!-- <li><a href="#blog-page">Blog</a></li> -->
                     <li><a href="#contact-page">Contact</a></li>
                 </ul>
 
@@ -408,13 +408,13 @@
                             <div class="counter">
                                 <span>Check</span>
                             </div>
-                            <span class="title">Available spots & time</span>
+                            <span class="title">Spots & Time</span>
                         </li>
                         <li class=" wow fadeInUp" data-wow-delay="1.1s">
                             <div class="counter">
-                                <span>Booking</span>
+                                <span>Book</span>
                             </div>
-                            <span class="title">Future Classes</span>
+                            <span class="title">Advance Class</span>
                         </li>
                     </ul>
                 </div>
@@ -758,38 +758,38 @@
             <div class="row ms-items">
                 <div class="col-xs-12 col-sm-6 ms-item">
                     <div class="single-faq wow fadeInUp" data-wow-delay="0.2s">
-                        <h5 class="title">What is your favorite fruit?</h5>
-                        <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of a not-quite-tuned-in radio station rises and for a while drowns out the patter. </p>
+                        <h5 class="title">What are class credits?</h5>
+                        <p>Each Hoblix classes has a dynamic credit value that changes based on factors like location, time, popularity. When you sign up, you’ll receive a set number of credits to book the workouts you want to try. </p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 ms-item">
                     <div class="single-faq wow fadeInUp" data-wow-delay="0.4s">
-                        <h5 class="title">Do you have nice handwriting?</h5>
-                        <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of a not-quite-tuned-in radio station rises and for a while drowns out the patter. </p>
+                        <h5 class="title">How do partners get started with Hoblix?</h5>
+                        <p>The first step? Fill out our contact form. Once we receive your details, we’ll assess if your business is the right fit for Hoblix. If you are, we’ll contact you to start the onboarding process.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 ms-item">
                     <div class="single-faq wow fadeInUp" data-wow-delay="0.6s">
-                        <h5 class="title">Have you ever fainted?</h5>
-                        <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of a not-quite-tuned-in radio station rises and for a while drowns out the patter. </p>
+                        <h5 class="title">What's different about Hoblix?</h5>
+                        <p>Hoblix belives instead of buying class packs at one class or follow single hobby is hard so access top classes or follow multiple hobbies with a one-of-a-kind credits system. </p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 ms-item">
                     <div class="single-faq wow fadeInUp" data-wow-delay="0.8s">
-                        <h5 class="title">Have you ever fainted?</h5>
+                        <h5 class="title">What’s the cost to my class to be a part of the Hoblix network?</h5>
                         <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of a not-quite-tuned-in radio station rises and for a while drowns out the patter. </p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 ms-item">
                     <div class="single-faq wow fadeInUp" data-wow-delay="1s">
-                        <h5 class="title">Which do you like better, book or eBook?</h5>
-                        <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of a not-quite-tuned-in radio station rises and for a while drowns out the patter. </p>
+                        <h5 class="title">How does Hoblix work?</h5>
+                        <p>Hoblix members pay a monthly fee and receive a set number of credits to use per month. Members can then book classes using their credits. Classes have different credit values. When a member finds a class they want to book, they do it directly in our app. </p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 ms-item">
                     <div class="single-faq wow fadeInUp" data-wow-delay="1.2s">
-                        <h5 class="title">What is your favorite comedy?</h5>
-                        <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of a not-quite-tuned-in radio station. </p>
+                        <h5 class="title">What’s my commitment period as a partner?</h5>
+                        <p>In order to see the true value from our partnership, we encourage all of our partners to stay on the platform long-term. Most of our partners would agree, too but should you change your mind, you can opt out of Hoblix with 90-days written notice. </p>
                     </div>
                 </div>
             </div>
