Add Reach Out action

--- a/website/index.html
+++ b/website/index.html
@@ -1025,7 +1025,7 @@
             $('.header-banner').hide(200)
         })
         $('#partner-btn').on('click', function(event){
-            hash = "#business-form"
+            hash = "#contact-page"
             $('html, body').animate({
                 scrollTop: $(hash).offset().top
             }, 800, function(){
