--- a/website/index.html
+++ b/website/index.html
@@ -9,27 +9,20 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Hoblix - Explore your hobbies</title>
+    <title>Hoblix - Explore your hobbies on the go.</title>
     <!-- Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" href="http://quomodosoft.com/html/lunatic/lunatic/images/apple-touch-icon.png">
     <link rel="shortcut icon" href="./images/favicon.ico" />
     <!-- Plugin-CSS -->
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/magnific-popup.css">
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/animate.css">
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/jquery-jvectormap-2.0.3.css">
+    <link rel="stylesheet" href="./css/magnific-popup.css">
+    <link rel="stylesheet" href="./css/animate.css">
     <!-- Main-Stylesheets -->
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/normalize.css">
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/style.css">
-    <link rel="stylesheet" href="http://quomodosoft.com/html/lunatic/lunatic/css/responsive.css">
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/vendor/modernizr-2.8.3.min.js"></script>
-
-    <!--[if lt IE 9]>
-        <script src="//oss.maxcdn.com/html5shiv/.2/html5shiv.min.js"></script>
-        <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+    <script src="./js/vendor/modernizr-2.8.3.min.js"></script>
     <style>
     .navbar-brand {
         font-size: x-large;
@@ -205,6 +198,9 @@
         font-weight: bold;
         text-decoration: underline;
         background-color: #ffffff;
+    }
+    .price-box {
+        background: url(./images/price-bg.png) no-repeat scroll right top/auto 50%;
     } 
     </style>
 </head>
@@ -955,8 +951,8 @@
                         <!-- <li><a href="#">Partners</a></li>
                         <li><a href="#">Career</a></li>
                         <li><a href="#">Reviews</a></li> -->
-                        <li><a href="#">Terms &amp; Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <!-- <li><a href="#">Terms &amp; Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li> -->
                     </ul>
                     <div class="space-50"></div>
                 </div>
@@ -1003,23 +999,24 @@
     </footer>
     <!-- Footer-Area / -->
     <!--Vendor-JS-->
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/vendor/bootstrap.min.js"></script>
+    <script src="./js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="./js/vendor/bootstrap.min.js"></script>
     <!--Plugin-JS-->
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/owl.carousel.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/contact-form.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/scrollUp.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/waypoints.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/jquery.counterup.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/masonry.pkgd.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/magnific-popup.min.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/imagesloaded.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/ajaxchimp.js"></script>
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/wow.min.js"></script>
+    <script src="./js/vendor/owl.carousel.min.js"></script>
+    <!-- <script src="./js/vendor/js/contact-form.js"></script> -->
+    <script src="./js/vendor/scrollUp.min.js"></script>
+    <script src="./js/vendor/waypoints.min.js"></script>
+    <script src="./js/vendor/jquery.counterup.min.js"></script>
+    <script src="./js/vendor/masonry.pkgd.min.js"></script>
+    <script src="./js/vendor/magnific-popup.min.js"></script>
+    <script src="./js/vendor/imagesloaded.js"></script>
+    <!-- <script src="http://quomodosoft.com/html/lunatic/lunatic/js/ajaxchimp.js"></script> -->
+    <script src="./js/vendor/wow.min.js"></script>
+    <script src="./js/vendor/imagesloaded.js"></script>
     <!-- <script src="http://quomodosoft.com/html/lunatic/lunatic/js/jquery-jvectormap-2.0.3.min.js"></script>
     <script src="http://quomodosoft.com/html/lunatic/lunatic/js/maps.js"></script> -->
     <!--Main-active-JS-->
-    <script src="http://quomodosoft.com/html/lunatic/lunatic/js/main.js"></script>
+    <script src="./js/vendor/main.js"></script>
     <script>
         $('#closeBanner').on('click', function(){
             $('.header-banner').hide(200)
