--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,16 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <script src="./js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158068313-1"></script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WSKNDT7');</script>
+    <!-- End Google Tag Manager -->
+
     <style>
     .navbar-brand {
         font-size: x-large;
@@ -201,11 +211,18 @@
     }
     .price-box {
         background: url(./images/price-bg.png) no-repeat scroll right top/auto 50%;
+    }
+    .zmdi-compass{
+        color: #22233b;
     } 
     </style>
 </head>
 
 <body data-spy="scroll" data-target=".mainmenu-area">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSKNDT7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- Preloader-content -->
     <div class="preloade">
         <span><i class="zmdi zmdi-compass"></i></span>
@@ -226,14 +243,14 @@
                     <a href="#" class="navbar-bttn">Try for free</a>
                 </div> -->
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#home-page">Home</a></li>
-                    <li><a href="#about-page">How it works</a></li>
-                    <li><a href="#feature-page">Activities</a></li>
-                    <li><a href="#faq">FAQs</a></li>
-                    <li><a href="#price-page">Plans</a></li>
-                    <li><a href="#partner-with-us">Partner With Us</a></li>
+                    <li class="active" id="nav-home-page"><a href="#home-page">Home</a></li>
+                    <li><a href="#about-page" id="nav-how-work">How it works</a></li>
+                    <li><a href="#feature-page" id="nav-activities">Activities</a></li>
+                    <li><a href="#price-page" id="nav-plans">Plans</a></li>
+                    <li><a href="#faq" id="nav-faq">FAQs</a></li>
+                    <li><a href="#partner-with-us" id="nav-partner">Partner With Us</a></li>
                     <!-- <li><a href="#blog-page">Blog</a></li> -->
-                    <li><a href="#contact-page">Contact</a></li>
+                    <li><a href="#contact-page" id="nav-contact">Contact</a></li>
                 </ul>
 
             </div>
@@ -277,7 +294,7 @@
                          <i class="zmdi zmdi-star-circle"></i><span class="pointer">No visit limits & easy cancellation</span>    
                         <div class="space-30"></div>
                         <h3 class="wow fadeInUp" data-wow-delay="0.4s">We're Launching Soon</h3>
-                        <a class="bttn-default bttn-lg" href="https://chat.whatsapp.com/DSpCNs4znuWKMHGt62qL5L" target="_blank">
+                        <a class="bttn-default bttn-lg" id="header-join" href="https://chat.whatsapp.com/DSpCNs4znuWKMHGt62qL5L" target="_blank">
                             <!-- <button class="bttn-default bttn-lg" type="button"> -->
                                 Join us on WhatsApp
                                 <!-- <span class="ml-3"></span>  -->
@@ -605,7 +622,7 @@
                             <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Remind you 4 days before</li>
                         </ul>
                         <h3 class="price-rate">&#8377; 0/-</h3>
-                        <a href="https://chat.whatsapp.com/DSpCNs4znuWKMHGt62qL5L" class="bttn-default" target="_blank">Get Started</a>
+                        <a href="https://chat.whatsapp.com/DSpCNs4znuWKMHGt62qL5L" class="bttn-default" id="price-join" target="_blank">Get Started</a>
                     </div>
                 </div>
                 <!-- <div class="col-xs-12 col-sm-4">
@@ -880,10 +897,10 @@
                     <h3 class="page-title">Ask us any questions</h3>
                     <div class="space-10"></div>
                     <ul class="nav navbar-nav ml-33 form-pack">
-                        <li class="form-active"><a class="form-tab" href="#user-form">User</a></li>
-                        <li><a class="form-tab" href="#corporate-form">Corporate</a></li>
-                        <li><a class="form-tab" href="#business-form">Business</a></li>
-                        <li><a class="form-tab" href="#collaborator-form">Collaborator</a></li>
+                        <li class="form-active"><a class="form-tab" id="contact-user" href="#user-form">User</a></li>
+                        <li><a class="form-tab" id="contact-corporate" href="#corporate-form">Corporate</a></li>
+                        <li><a class="form-tab" id="contact-business" href="#business-form">Business</a></li>
+                        <li><a class="form-tab" id="contact-collaborator" href="#collaborator-form">Collaborator</a></li>
                     </ul>
                     <div class="space-50"></div>
                 </div>
@@ -904,22 +921,6 @@
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPQd4rZJtRzf-DHGbDKgJzbCC8ZpnSP3ICUiQj3pg737neow/viewform?embedded=true" width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-xs-12 col-md-10 col-md-offset-1">
-                    <div class="form-iframe" id="user-form"> 
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdxA64nBnlH6Hhav1H6wUuIAc527-gz4fjdpbTwd1VT8421tA/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                    </div>
-                    <div class="form-iframe" id="corporate-form" style="display: none;"> 
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeI9YLtIRHVdGvvvrLE3ZL6XXu8PAjwRQqkHYjyHIinMKo49A/viewform?embedded=true" width="700" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                    </div>
-                     <div class="form-iframe" id="business-form" style="display: none;"> 
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfkx6sjFM6Xj3IEQRjXK0jLT41nXj2tAMyn07T0YRrANysAAQ/viewform?embedded=true" width="640" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                    </div>
-                    <div class="form-iframe" id="collaborator-form" style="display: none;"> 
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPQd4rZJtRzf-DHGbDKgJzbCC8ZpnSP3ICUiQj3pg737neow/viewform?embedded=true" width="640" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </section>
     <!-- Contact-Form / -->
@@ -931,13 +932,12 @@
                     <!-- <img src="http://quomodosoft.com/html/lunatic/lunatic/images/logo.png" alt=""> -->
                     <img class="logo" src="./images/logo.png" alt="">
                     <div class="space-20"></div>
-                    <p>Enjoy hobbies on the go</p>
+                    <p>Explore your hobbies on the go.</p>
                     <div class="space-20"></div>
                     <ul class="social-menu">
-                        <li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
-                        <li><a href="#"><i class="zmdi zmdi-twitter"></i></a></li>
-                        <li><a href="#"><i class="zmdi zmdi-google-plus"></i></a></li>
-                        <li><a href="#"><i class="zmdi zmdi-youtube-play"></i></a></li>
+                        <li><a href="https://www.facebook.com/Hoblix-109619280611749" target="_blank"><i class="zmdi zmdi-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/hoblix_official" target="_blank"><i class="zmdi zmdi-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/hoblix" target="_blank"><i class="zmdi zmdi-youtube-play"></i></a></li>
                     </ul>
                     <div class="space-20"></div>
                     <p>Copyright Hoblix Pvt. Ltd. 2020</p>
@@ -947,7 +947,7 @@
                     <h4>About</h4>
                     <div class="space-10"></div>
                     <ul class="list">
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="https://angel.co/company/hoblix" target="_blank" class="footer-about">About Us</a></li>
                         <!-- <li><a href="#">Partners</a></li>
                         <li><a href="#">Career</a></li>
                         <li><a href="#">Reviews</a></li> -->
