Added Google Tag Manager

--- a/website/index.html
+++ b/website/index.html
@@ -220,8 +220,7 @@
 
 <body data-spy="scroll" data-target=".mainmenu-area">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSKNDT7"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSKNDT7" height="0" width="0" style="display:none; visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- Preloader-content -->
     <div class="preloade">
