Update LinkedIn icon

--- a/website/index.html
+++ b/website/index.html
@@ -936,7 +936,7 @@
                     <ul class="social-menu">
                         <li><a href="https://www.facebook.com/Hoblix-109619280611749" target="_blank"><i class="zmdi zmdi-facebook"></i></a></li>
                         <li><a href="https://twitter.com/hoblix_official" target="_blank"><i class="zmdi zmdi-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/company/hoblix" target="_blank"><i class="zmdi zmdi-youtube-play"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/hoblix" target="_blank"><i class="zmdi zmdi-linkedin"></i></a></li>
                     </ul>
                     <div class="space-20"></div>
                     <p>Copyright Hoblix Pvt. Ltd. 2020</p>
