--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WSKNDT7');</script>
+    })(window,document,'script','dataLayer','GTM-PRFVW26');</script>
     <!-- End Google Tag Manager -->
 
     <style>
@@ -220,7 +220,8 @@
 
 <body data-spy="scroll" data-target=".mainmenu-area">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSKNDT7" height="0" width="0" style="display:none; visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRFVW26"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- Preloader-content -->
     <div class="preloade">
