Remove banner image in mobile device

--- a/website/index.html
+++ b/website/index.html
@@ -46,9 +46,13 @@
     .logo {
         width: 159px;
         margin-top: -24px;
+    } 
+    @media screen and (min-width: 800px) {
+        .header-area {
+            background: url(./images/background.png) no-repeat scroll right bottom / 100% auto;
+        }
     }
     .header-area {
-        background: url(./images/background.png) no-repeat scroll right bottom / 100% auto;
         background-position: center;
         margin-top: 70px;
     }
