Remove banner image in mobile device

--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="./images/logo_2.png">
     <!-- Title -->
     <title>Hoblix - Explore your hobbies on the go.</title>
     <!-- Place favicon.ico in the root directory -->
